--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: fredekstrand.github.io/slate
+remote_theme: fredekstrand/slate
 show_downloads: true 
 google_analytics: UA-105343860-1
