--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: fredekstrand/slate
+remote_theme: fredekstrand.github.io/jekyll-theme-slateb
 show_downloads: true 
 google_analytics: UA-105343860-1
