--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: fredekstrand.github.io/slateb
+remote_theme: fredekstrand/slateb
 show_downloads: true 
 google_analytics: UA-105343860-1
