--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: FredEkstrand/github.io/slateb 
+remote_theme: FredEkstrand/github.io/jekyll-theme-slateb
 show_downloads: true 
 google_analytics:
