--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: FredEkstrand/jekyll-theme-slateb
 show_downloads: true 
-google_analytics: 
+google_analytics: UA-105343860-1
